--- a/linear_regression_without_library/linear_regression_without_library.ipynb
+++ b/linear_regression_without_library/linear_regression_without_library.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 398,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 399,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 402,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
       "\n",
       "1653.3566666666666\n",
       "\n",
-      "mean of the output is :  18.479573647208188\n",
+      "mean of the output is :  974.9536176124826\n",
       "\n",
       "total number of values are :  300\n"
      ]
@@ -137,7 +137,7 @@
     "print(\"\")\n",
     "print(X_bar)\n",
     "print(\"\")\n",
-    "print(\"mean of the output is : \", Y_mean)\n",
+    "print(\"mean of the output is : \", Y_bar)\n",
     "\n",
     "#total number of values\n",
     "n = len(X)\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 403,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,22 +164,22 @@
     "M = upper_value / lower_value\n",
     "\n",
     "#bias\n",
-    "C = Y_bar - ( b1 * X_bar)\n",
+    "C = Y_bar - ( M * X_bar)\n",
     "\n",
-    "Y = C + M * x\n",
+    "Y = C + M * X\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 405,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy :  88.93995408901168\n"
+      "accuracy :  0.0\n"
      ]
     }
    ],
@@ -200,10 +200,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:           PT08.S4(NO2)   R-squared:                       0.970\n",
+      "Model:                            OLS   Adj. R-squared:                  0.970\n",
+      "Method:                 Least Squares   F-statistic:                     9617.\n",
+      "Date:                Fri, 07 Dec 2018   Prob (F-statistic):          2.15e-229\n",
+      "Time:                        22:01:29   Log-Likelihood:                -2128.0\n",
+      "No. Observations:                 300   AIC:                             4258.\n",
+      "Df Residuals:                     299   BIC:                             4262.\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "================================================================================\n",
+      "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "--------------------------------------------------------------------------------\n",
+      "PT08.S4(NO2)     1.5947      0.016     98.064      0.000       1.563       1.627\n",
+      "==============================================================================\n",
+      "Omnibus:                       40.989   Durbin-Watson:                   0.374\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               55.517\n",
+      "Skew:                          -0.917   Prob(JB):                     8.80e-13\n",
+      "Kurtosis:                       4.038   Cond. No.                         1.00\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "from statsmodels.sandbox.regression.predstd import wls_prediction_std\n",
+    "\n",
+    "model1=sm.OLS(X,Y)\n",
+    "\n",
+    "result=model1.fit()\n",
+    "\n",
+    "print(result.summary())"
+   ]
   },
   {
    "cell_type": "code",
